# SCC0541-Lab-BD-Projeto

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  build.rs  default.nix  flake.nix
assets/: style.scss
assets/theme/: projetobd.scss
assets/theme/projetobd/: _colors.scss  _dark.scss  _light.scss
db/: .gitignore  01-ddl_inicial.sql  03-tabela_e_triggers_users.sql  04-criar_usuarios.sql  05-funcoes.sql  05-nulabilidade_mais_rigida.sql  06-funcoes_overview_relatorios_acoes.sql  README.md
nix/: default.nix  module.nix
src/: lib.rs  main.rs
src/common/: error.rs  mod.rs  tera.rs
src/routes/: account.rs  accounts.rs  actions.rs  assets.rs  errors.rs  health.rs  home.rs  login.rs  logout.rs  mod.rs  overview.rs  reports.rs
src/schema/: admin.rs  constructor.rs  driver.rs  mod.rs  user.rs
templates/: accounts.html.tera  action-add-constructor.html.tera  action-add-driver.html.tera  action-get-driver.html.tera  base.html.tera  error.html.tera  login.html.tera  overview-admin.html.tera  overview-constructor.html.tera  overview-driver.html.tera  overview.html.tera  report1.html.tera  report2.html.tera  report3.html.tera  report4.html.tera  report5.html.tera  report6.html.tera
