[package]
name = "projeto-labbd"
version = "0.1.0"
readme = "README.md"
edition = "2021"
license = "AGPL-3.0-or-later"
build = "build.rs"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = [ "secrets", "json" ]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = [ "tera" ]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = [ "deadpool_postgres" ]

[dependencies.postgres-types]
version = "0.2"
features = [ "derive" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[build-dependencies.grass]
version = "0.10"
default-features = false
