[package]
name = "projeto-labbd"
version = "0.1.0"
readme = "README.md"
edition = "2021"
license = "AGPL-3.0-or-later"
build = "build.rs"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = [ "secrets", "json" ]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = [ "tera" ]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = [ "deadpool_postgres" ]

[dependencies.postgres-types]
version = "0.2"
features = [ "derive", "with-chrono-0_4", "with-time-0_3" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.async-trait]
version = "0.1"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.timeago]
version = "0.3"

[dependencies.time]
version = "0.3"
features = [ "serde" ]

[build-dependencies.grass]
version = "0.10"
default-features = false
